--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jotai": "^2.12.2",
     "jotai-tanstack-query": "^0.9.0",
     "lucide-react": "^0.483.0",
+    "motion": "^12.6.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.6.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
